--- a/03_js/03_branch.html
+++ b/03_js/03_branch.html
@@ -17,11 +17,11 @@
     } else if(age <= 7) {
       result = "미취학 아동";
     } else if (age <= 13) {
-      result = "초등학생"
+      result = "초등학생";
     } else if (age <= 16) {
-      result = "중학생"
+      result = "중학생";
     } else if (age <= 19) {
-      result = "고등학생"
+      result = "고등학생";
     } else {
       result = "성인";
     }
