--- a/03_js/ES6.html
+++ b/03_js/ES6.html
@@ -103,11 +103,16 @@
           함수이름([인자]);
     */
 
-    const myFunc = () => {
+    const myFunc1 = () => {
       console.log('myFunc 실행');
     }
 
-    myFunc();
+    myFunc1();
+
+    const myFunc2 = () => 'hello world'; // return 만 존재하는 경우 return 키워드 생략이 가능하다.
+   
+
+    console.log(myFunc2());
   </script>
 
   <script>
