--- a/03_js/08_bulit.html
+++ b/03_js/08_bulit.html
@@ -25,7 +25,7 @@
   }
 
   // encodeURIComponent()
-  console.log(encodeURIComponent('https://search.naver.com/search.naver?where=nexearch&sm=top_sug.pre&fbm=0&acr=1&acq=%EB%82%B4%EC%9D%BC&qdt=0&ie=utf8&query=%EB%82%B4%EC%9D%BC%EB%82%A0%EC%94%A8'));
+  console.log(encodeURIComponent('https://search.naver.com/search.naver?query=내일날씨'));
 
   // decodeURIComponent()
   console.log(decodeURIComponent('%3A%3F%2F'));
