--- a/03_js/09_builtin.object.html
+++ b/03_js/09_builtin.object.html
@@ -39,7 +39,7 @@
 
     /*
       Array 내장 객체
-      1. forEach() : 반복분
+      1. forEach() : 반복문
       2. filter()  : 요소 검사
       3. map()     : 요소 바꾸기
     */
@@ -51,7 +51,7 @@
     array.forEach(function(element){  // array의 모든 요소가 하나씩 element로 전달된다.
       console.log(element);
     });
-    array.forEach(function(element, i){
+    array.forEach(function(element, i){ // i는 인텍스(배열에서 각 요소의 위치를 가리키는 번호)
       console.log(i, element);
     });
 
@@ -77,7 +77,7 @@
 
     /* Math 내장 함수*/
 
-    console.log('절대값', Math.abs(-5));            // 5
+    console.log('절대값', Math.abs(-5));            // 절대값 5
 
     console.log('정수 올림값', Math.ceil(5.1));     // 6  
     console.log('정수 올림값', Math.ceil(-5.1));    // -5
@@ -149,13 +149,13 @@
     console.log('Script', str.substring(4));  // 인덱스 4 <= 문자열 끝까지
     console.log('Java', str.substr(0, 4));    // 인덱스 0부터 4글자 (사용금지)  
     console.log('Script', str.substr(4));     // 인덱스 4부터 끝까지 (사용금지)
-    console.log('Java', str.slice(0));        // 인덱스 0 <= 문자열 < 인덱스 4
+    console.log('Java', str.slice(0, 4));     // 인덱스 0 <= 문자열 < 인덱스 4
     console.log('Script', str.slice(4));      // 인덱스 4 <= 문자열 끝까지
     console.log('Java', str.slice(-10, -6));  // 인덱스 -10 <= 문자열 < 인덱스 -6 (마지막 글자의 인덱스는 -1이다.)
     console.log('Script', str.slice(-6));     // 인덱스 -6 <= 문자열 끝까지
 
     // 5. 특정 패턴을 가지는지 검사 결과를 반환
-    console.log(str.startsWith('Java')); // 'Java'로 시각하면 true 반환
+    console.log(str.startsWith('Java')); // 'Java'로 시작하면 true 반환
     console.log(str.endsWith('Script')); // 'Script'로 끝나면 true 반환
     console.log(str.match(/[0-9]/));     // 정규식과 매칭하는 부분이 있으면 캡쳐된 결과의 첫 번째 요소를 배열로 반환하고 없으면 null반환
 
